# obs-gamepad

./: Cargo.toml  LICENSE  README.md  bundle.ps1  example.toml  flake.nix  gram-layout.nix  install.sh  test.toml
layouts/: example.toml  gram-layout.nix  gram.toml  test.toml
src/: config.rs  gamepad.rs  haybox.rs  lib.rs  main.rs  serial.rs  usb.rs
