[package]
name = "obs-gamepad"
version = "0.1.0"
edition = "2021"

[lib]
name = "gamepad"
crate-type = ["cdylib"]

[dependencies]
obs-wrapper = "0.4"
tiny-skia = "0.11"
gilrs-core = "0.5"
minifb = "0.27"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify-debouncer-mini = "0.4"
log = "0.4"
serialport = "4.5"

[profile.release]
lto = "thin"
panic = "abort"
