[package]
name = "obs-gamepad"
version = "0.1.1"
edition = "2021"

[lib]
name = "gamepad"
crate-type = ["cdylib"]

[dependencies]
obs-wrapper = "0.4"
tiny-skia = "0.11"
gilrs-core = "0.6"
minifb = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
notify-debouncer-mini = "0.7"
log = "0.4"
serialport = { git = "https://github.com/erkki-silvola/serialport-rs", branch = "windows-overlapped-io" }
color-eyre = "0.6"

[profile.release]
lto = "thin"
panic = "abort"
